# nilmbench

./: .dockerignore  .gitignore  README.md  compose.yaml  index.html  leaderboard.csv  leaderboard.html  leaderboard.json  paper.html  pyproject.toml
.github/workflows/: benchmark-ci.yml  publish-images.yml
configs/: datasets.toml  metrics.toml  runtimes.toml  tasks.toml
docker/: Dockerfile.cpu  Dockerfile.cuda
docs/: protocol-audit.md
results/published/corrected-t1-redd--BERT--seed10--20260717T115506.295839Z/: metrics.csv  result.json
results/published/corrected-t1-redd--BERT--seed10--20260718T132052.099270Z/: metrics.csv  result.json
results/published/corrected-t1-redd--BERT--seed20--20260717T115520.874545Z/: metrics.csv  result.json
results/published/corrected-t1-redd--BERT--seed20--20260718T132052.113900Z/: metrics.csv  result.json
results/published/corrected-t1-redd--BERT--seed42--20260717T115536.605550Z/: metrics.csv  result.json
results/published/corrected-t1-redd--BERT--seed42--20260718T132052.616841Z/: metrics.csv  result.json
results/published/corrected-t1-redd--ConvLSTM--seed10--20260717T115551.744282Z/: metrics.csv  result.json
results/published/corrected-t1-redd--ConvLSTM--seed10--20260718T132056.888967Z/: metrics.csv  result.json
results/published/corrected-t1-redd--ConvLSTM--seed20--20260717T115601.615505Z/: metrics.csv  result.json
results/published/corrected-t1-redd--ConvLSTM--seed20--20260718T132105.534508Z/: metrics.csv  result.json
results/published/corrected-t1-redd--ConvLSTM--seed42--20260717T115604.151517Z/: metrics.csv  result.json
results/published/corrected-t1-redd--ConvLSTM--seed42--20260718T132105.885949Z/: metrics.csv  result.json
results/published/corrected-t1-redd--DAE--seed10--20260717T115607.388013Z/: metrics.csv  result.json
results/published/corrected-t1-redd--DAE--seed10--20260718T132106.237731Z/: metrics.csv  result.json
results/published/corrected-t1-redd--DAE--seed20--20260717T115612.211657Z/: metrics.csv  result.json
results/published/corrected-t1-redd--DAE--seed20--20260718T132112.203750Z/: metrics.csv  result.json
results/published/corrected-t1-redd--DAE--seed42--20260717T115617.900705Z/: metrics.csv  result.json
results/published/corrected-t1-redd--DAE--seed42--20260718T132119.853631Z/: metrics.csv  result.json
results/published/corrected-t1-redd--DLinear--seed10--20260717T140238.122280Z/: metrics.csv  result.json
scripts/: README.md  diagrams.py  figures.py
slides/: nilmbench2026.html  nilmbench2026.md
slides/outputs/: slide-check.002  slide-check.003  slide-check.004  slide-check.005  slide-check.006  slide-check.007  slide-check.008  slide-check.009  slide-check.010  slide-check.011  slide-check.012  slide-check.013  slide-check.014
src/nilmbench/: __init__.py  _contracts.py  _io.py  cli.py  config.py  data.py  leaderboard.py  provenance.py  registry.py  runner.py
static/: home.js  leaderboard.js  site.css
tests/: test_cli.py  test_config.py  test_config_adversarial.py  test_containers.py  test_data_identity.py  test_io.py  test_leaderboard.py  test_metrics.py  test_provenance.py  test_published_results.py  test_registry.py  test_runner_contracts.py  test_site.py
(+264 files in other folders)
