[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "nilmbench"
version = "0.1.0"
description = "Reproducible benchmark runner for non-intrusive load monitoring"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "NILMbench developers" }]
dependencies = []

[project.optional-dependencies]
runtime = [
  "numpy>=1.26,<2",
  "optuna>=4,<5",
  "pandas>=2,<3",
]
benchmark = [
  "nilmtk-contrib[torch] @ git+https://github.com/nilmtk/nilmtk-contrib.git@f152f9f1783161bced09da7239d7ad57f4196a9b",
  "numpy>=1.26,<2",
  "optuna>=4,<5",
  "pandas>=2,<3",
]
dev = [
  "numpy>=1.26,<2",
  "pandas>=2,<3",
  "pytest>=8,<9",
  "ruff>=0.11,<1",
]

[project.scripts]
nilmbench = "nilmbench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nilmbench"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.force-include]
"configs" = "nilmbench/configs"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
