[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "nilmbench"
version = "0.1.0"
description = "Reproducible benchmark runner for non-intrusive load monitoring"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "NILMbench developers" }]
dependencies = []

[project.optional-dependencies]
runtime = [
  "nilm-metadata @ git+https://github.com/nilmtk/nilm_metadata.git@59c9990de4836d77c0dcd807bd4293e39e0cc314",
  "nilmtk @ git+https://github.com/nilmtk/nilmtk.git@0768b1b8457eef9de76d123a94e2de8af22a45d0",
  "numpy>=1.26,<2",
  "optuna>=4,<5",
  "pandas>=2,<3",
]
torch-runtime = [
  "filelock>=3,<4",
  "fsspec>=2024,<2027",
  "jinja2>=3.1,<4",
  "networkx>=3,<4",
  "sympy==1.13.1",
  "typing-extensions>=4.10,<5",
]
build-runtime = [
  "hatchling>=1.27,<2",
]
benchmark = [
  "nilm-metadata @ git+https://github.com/nilmtk/nilm_metadata.git@59c9990de4836d77c0dcd807bd4293e39e0cc314",
  "nilmtk @ git+https://github.com/nilmtk/nilmtk.git@0768b1b8457eef9de76d123a94e2de8af22a45d0",
  "nilmtk-contrib[torch] @ git+https://github.com/nilmtk/nilmtk-contrib.git@5767286078f5853a2ef1d6f431eb95a1c47ba4e8",
  "numpy>=1.26,<2",
  "optuna>=4,<5",
  "pandas>=2,<3",
]
dev = [
  "numpy>=1.26,<2",
  "pandas>=2,<3",
  "pytest>=8,<9",
  "ruff>=0.11,<1",
]

[project.scripts]
nilmbench = "nilmbench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nilmbench"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
override-dependencies = [
  "nilm-metadata @ git+https://github.com/nilmtk/nilm_metadata.git@59c9990de4836d77c0dcd807bd4293e39e0cc314",
  "nilmtk @ git+https://github.com/nilmtk/nilmtk.git@0768b1b8457eef9de76d123a94e2de8af22a45d0",
]

[tool.hatch.build.targets.wheel.force-include]
"configs" = "nilmbench/configs"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
